# kladd

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SYNTAX.md
.github/workflows/: pipeline.yml
src/: ast.rs  ast_visualizer.rs  char_cursor.rs  cursor.rs  error.rs  html.rs  lexer.rs  lib.rs  parser.rs  test_utils.rs  token_cursor.rs
src/snapshots/: kladd__tests__ast.snap  kladd__tests__document_iter.snap  kladd__tests__html.snap  kladd__tests__parse_simple.snap  kladd__tests__tokenizer.snap  kladd__tests__visualize.snap  scribble__html__tests__it_works.snap  scribble__lexer__tests__it_looks_correct.snap  scribble__lexer__tests__it_works.snap  scribble__parser__tests__it_works.snap  scribble__parser__tests__it_works.snap.new  scribble__tests__ast.snap  scribble__tests__html.snap  scribble__tests__tokenizer.snap
