[package]
name = "kladd"
version = "0.1.0"
edition = "2024"
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "A weirdly personal markup language"
documentation = "https://docs.rs/kladd"
homepage = "https://github.com/sondr3/kladd"
repository = "https://github.com/sondr3/kladd"
license = "MIT OR Apache-2.0"

[dependencies]
htmlize = "1.0.6"

[dev-dependencies]
insta = "1.43.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

